# on-data

./: .nojekyll  404.html  README.md  _config.yml  _quarto.yml  about.html  about.qmd  index.html  index.qmd  listings.json  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
.github/workflows/: upgrade.yaml
_action_files/: settings.ini
_fastpages_docs/: _setup_pr_template.md  _upgrade_pr.md
_layouts/: post.html
_notebooks/: 2020-02-20-test.ipynb
_pages/: about.md
_posts/: 2020-01-14-test-markdown-post.md  2020-10-16-structure-and-interpretation-of-computer-programs.md  2020-10-16-structure-and-interpretation-of-computer-programs1.md  2021-02-17-canon.md  2021-02-20-linear-algebra.md
about/: index.html
assets/css/: style.css.map
assets/js/: search-data.json  search.js
categories/: index.html
jupyter/2020/02/20/: test.html
markdown/2020/01/14/: test-markdown-post.html
markdown/2020/10/16/: structure-and-interpretation-of-computer-programs.html
markdown/2021/02/17/: canon.html
markdown/2021/02/20/: linear-algebra.html
posts/: 2020-10-16-structure-and-interpretation-of-computer-programs.html  2021-02-17-canon.html  2021-02-17-canon.md  2021-02-20-linear-algebra.html  2021-02-20-linear-algebra.md  2021-09-12-multivariate-calculus_01.html  2021-09-12-multivariate-calculus_01.md  2022-03-14-pre-calculus.html  2022-03-14-pre-calculus.md
posts/post-with-code/: index.html  index.qmd
posts/welcome/: index.html
search/: index.html
