[tool.poetry]
name = "on-data"
version = "0.1.0"
description = ""
authors = ["michael <23582917+m-01101101@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
nbdev = "^2.3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
